templates/static/css/index.css
/* ... */
.collapse-text {
    color: black;
    text-align: left;
    font-size: 16px;
    font-family: "Oxygen", sans-serif;
    font-weight: 400;
}

.user {
    display: flex;
    margin-top: auto;
}

.user .profile-image {
    border-radius: 50%;
    width: 50px;
    height: 50px;
    margin-right: 20px;
}
.user-info {
    margin: 0;
    color: #545d7a;
    width: 100%;
}

.calendar-invite {
    display: flex;
    float: right;
}

.profile-image{
    border-style: none;
    border-style: solid;
    max-width: 100%;
    height: auto;
    display: block;
}

.new-crush {
    align-items: center;
    justify-content: center;
}

.card {
    --bg-opacity: 1;
    background-color: #0B0D19;
    border-radius: 0.5rem;
    flex-wrap: wrap;
    display: flex;
    float: left;
    display: flex;
    width: 100%;
    flex-direction: column;
}

.card-container {
    padding: 1.5rem;
    width: 70%;
}

@media (max-width:768px){
    .card-container {
        width: 100%;
    }
}

.inner-card {
    padding: 1rem;
}

.dashboard-header {
    padding: 20px 10px;
    background-color: #0B0D19;
    display: flex;
    align-items: center;
    width: -webkit-fill-available;
}
  
.dashboard-header a.logo {
    font-size: 25px;
    font-weight: bold;
}
    
.dashboard-header a:hover {
    background-color: #ddd;
    color: black;
}

.add-crush-button {
    font-size: 16px;
    font-family: "Oxygen", sans-serif;
    color: #fff;
    background-color: #0B0D19;
    cursor: pointer;
    justify-content: space-evenly;
    align-items: center;
    display: inline-flex;
    height: 40px;
    min-width: 96px;
    padding: 2px 10px 0;
    clear: both;
    text-decoration: none;
}

.add-crush-button-2 {
    font-size: 16px;
    font-family: "Oxygen", sans-serif;
    color: #fff;
    background-color: #0B0D19;
    cursor: pointer;
    justify-content: space-evenly;
    align-items: center;
    display: inline-flex;
    height: 40px;
    min-width: 96px;
    width: 60vw;
    padding: 1.5rem 10px;
    margin: 0;
    clear: both;
    text-decoration: none;
}

@media (min-width: 1080px){
    .add-crush-button-2 {
        width: 100%;
    }
}

.logout-button {
    font-size: 16px;
    font-family: "Oxygen", sans-serif;
    color: #1B1F58;
    background-color: #fff;
    cursor: pointer;
    justify-content: space-evenly;
    align-items: center;
    display: inline-flex;
    height: 40px;
    min-width: 96px;
    padding: 2px 10px 0;
    text-decoration: none;
}
  
.header-right {
    float: right;
}

.text-logo {
    font-size: 1.6rem; 
    font-weight: 600; 
    font-family: 'Trebuchet MS', sans-serif; 
    color: #fff; 
    display: inline-block; 
    vertical-align: middle;
}

.dashboard-header-text {
    float: left; 
    height: 2rem; 
    display: flex; 
    align-items: center; 
    justify-content: 
    center; width: 80vw;
}

.logo {
    float: left; 
    height: 2.5rem; 
    width: auto; 
    padding: 0 1rem;
}
  
@media screen and (max-width: 500px) {
    .dashboard-header a {
        float: none;
        text-align: left;
    }

    .header-right {
        float: none;
    }
}

.tab-row:after, tab-row:before {
    content: "";
    display: table;
    clear: both;
}

.tab-row {
    text-align: center;
    display: flex;
    justify-content: center;
}

.tab-width {
    width: 30vw;
}

.tab-title {
    float: left;
    width: 100%;
    padding: 0 8px;
    color: #000;
    font-family: "Oxygen", sans-serif;
    border-bottom: 6px solid #ccc !important;
    padding: 8px 0 !important;
}

.tab-title:hover {
    color: #000!important;
    background-color: #f1f1f1 !important;
}

.tab-container:before, tab-container:after {
    content: ""; 
    display: table;
    clear: both;
}

.tab-container {
    width: 100%;
    justify-content: center;
}

.red-border {
    border-color: #FE3447 !important;
}

.middle-section {
    padding: 2rem;
    width: 80vw;
    height: 20vh;
    margin: auto;
}

.centered {
    height: 70vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: "Oxygen", sans-serif;
}

.crush-div {
    min-height: 230px;
    height: 30vh;
    float: left;
    display: grid;
    margin: 20px 20px 20px 0;
    width: 300px;
    flex-direction: row;
}

@media (max-width: 1080px) {
    .crush-div {
        width: 60vw;
    }
    .tab-container {
        display: flex !important;
    }
    .bottom-div-2 {
        display: flex !important;
        justify-content: center;
    }
}

.top-div {
    position:absolute;
}

.bottom-div {
    position: relative;
    top: 3rem;
}

.modal {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    opacity: 0;
    visibility: hidden;
    transform: scale(1.1);
    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
}

.modal-title-1 {
    color: black; 
    font-size: 20px; 
    font-family: "Oxygen", sans-serif; 
    font-weight: 600;
    padding-top: 5px;
}

.modal-title {
    color: black; 
    font-size: 15px; 
    font-family: "Oxygen", sans-serif; 
    font-weight: 600;
    padding-top: 20px;
}

.modal-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    padding: 2rem 3rem;
    width: 24rem;
    max-height: 80vh;
    overflow: auto;
}

.close-button {
    float: right;
    width: 1.5rem;
    line-height: 1.5rem;
    text-align: center;
    cursor: pointer;
    border-radius: 0.25rem;
    background-color: lightgray;
}

.close-button:hover {
    background-color: darkgray;
}

.show-modal {
    opacity: 1;
    visibility: visible;
    transform: scale(1.0);
    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
}

.crush-input {
    width: -webkit-fill-available;
    height: 1.5rem;
    padding: 3px;
    margin-top: 20px;
    font-size: 16px;
}
/* ... */

